fix: mobile responsive scroll visibility pointer defined twice

--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -172,7 +172,6 @@
           font-size: 20px;
           color: white;
           font-weight: 700;
-          cursor: pointer;
           transition: all 0.4s ease-in-out;
           margin-top: 20px;
 
